# warehouse_localization

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: TASKS.md
.devcontainer/: devcontainer.json
docs/: CAPTURE_SPEC.md  COMMANDS.md  CONCEPTS.md  KNOWN_ISSUES.md  M2_WORLD_DESIGN.md  M3_ANALYSIS.md  M3_BASELINE.md  M5_ANALYSIS.md  M5_EKF.md  M6_ANALYSIS.md  M7_COMPARISON.md  P3_SENSOR_LANDMARK.md  P5_SCENARIOS.md  README.md  SETUP_HISTORY.md
ros2_ws/outputs/: README.md
ros2_ws/src/warehouse_localization_baseline_02/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_localization_baseline_02/config/: amcl.yaml  amcl_zhit1.yaml  baseline.rviz
ros2_ws/src/warehouse_localization_baseline_02/launch/: baseline.launch.py  localization.launch.py
ros2_ws/src/warehouse_localization_baseline_02/results/: C1_baseline.summary.json  C2_baseline.summary.json  C3_baseline.summary.json  C4_baseline.summary.json  C5_baseline.summary.json
ros2_ws/src/warehouse_localization_baseline_02/scripts/: metrics_recorder.py  plot_metrics.py  plot_scenarios.py  run_all_baseline.sh  run_scenario.sh  summarize.py
ros2_ws/src/warehouse_localization_ekf_03/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_localization_ekf_03/config/: ekf.yaml
ros2_ws/src/warehouse_localization_ekf_03/launch/: ekf.launch.py
ros2_ws/src/warehouse_localization_ekf_03/scripts/: noise_injector.py  plot_ekf_compare.py  run_all_ekf.sh  run_scenario_ekf.sh
ros2_ws/src/warehouse_localization_landmark_04/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_localization_landmark_04/config/: landmarks.yaml
ros2_ws/src/warehouse_localization_landmark_04/launch/: landmark.launch.py
ros2_ws/src/warehouse_localization_landmark_04/scripts/: gen_reflectors.py  landmark_localizer.py  plot_final_compare.py  plot_per_scenario.py  plot_presentation.py  plot_reflectors.py  run_all_landmark.sh  run_scenario_landmark.sh
ros2_ws/src/warehouse_localization_sim_01/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_localization_sim_01/config/: warehouse.rviz
ros2_ws/src/warehouse_localization_sim_01/launch/: display.launch.py  warehouse_world.launch.py
ros2_ws/src/warehouse_localization_sim_01/maps/factory/: README.md
ros2_ws/src/warehouse_localization_sim_01/maps/warehouse/: README.md  warehouse_map.yaml
ros2_ws/src/warehouse_localization_sim_01/models/warehouse_waffle_ekf/: model.config  model.sdf
ros2_ws/src/warehouse_localization_sim_01/models/warehouse_waffle_lidar12/: model.config  model.sdf
ros2_ws/src/warehouse_localization_sim_01/scripts/: auto_drive_demo.py  clean_map.py  map_builder.py
ros2_ws/src/warehouse_localization_sim_01/worlds/factory/: README.md
ros2_ws/src/warehouse_localization_sim_01/worlds/warehouse/: warehouse_open.world  warehouse_reflectors.world
