<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_localization_baseline_02</name>
  <version>0.1.0</version>
  <description>
    M3 Baseline: 개활 창고에서 AMCL 단독 로컬라이제이션을 돌려 드리프트/공분산 폭발을
    재현·시각화하고, ground-truth 대비 오차 지표를 기록한다. (문제 제기 단계)
  </description>
  <maintainer email="cogmo@hippotnc.com">sunghun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>warehouse_localization_sim_01</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
