<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_localization_sim_01</name>
  <version>0.1.0</version>
  <description>
    M2: 특징 없는 개활 창고 Gazebo 월드 (외벽 폐쇄 60x60m, 구조 기둥 20m 격자,
    적재 랙으로 기둥 가림). warehouse_localization PoC의 시뮬레이션 무대.
  </description>
  <maintainer email="cogmo@hippotnc.com">sunghun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
